colored social icons

--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
 				<a class="btn btn-info compare-grp" href="#">Compare </a>
 			    	<h4 class="background small"><span>Share your result</span></h4>
 			    	<div class="share">
-				    	<a href="#"><i class="fa  fa-dribbble fa-lg"></i></a>
-				    	<a href="#"><i class="fa fa-twitter-square fa-lg"></i></a>
-				    	<a href="#"><i class="fa fa-facebook-square fa-lg"></i></a>
-				    	<a href="#"><i class="fa fa-google-plus-square fa-lg"></i></a>
-				    	<a href="#"><i class="fa fa-linkedin-square fa-lg"></i></a>
+				    	<a href="#" class="wb"><i class="fa  fa-dribbble "aria-hidden="true"></i></a>
+				    	<a href="#" class="tw"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
+				    	<a href="#" class="fb"><i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i></a>
+				    	<a href="#" class="go"><i class="fa fa-google-plus-square fa-lg" aria-hidden="true"></i></a>
+				    	<a href="#" class="ln"><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i></a>
 				</div>
 			  </div>
 			  <div id="stats" class="tab-pane fade">
