--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 			        <input type="checkbox" name="checkbox"> Search Exact Keyword
 			        <p>22 Tweets by searching</p>
 			    	<h4 class="background"><span>View</span></h4>
-			    	<input type="radio" name="cluster"> Clusters<br/>
-			    	<input type="radio" name="heatmap"> Heatmap<br/>
-			    	<input type="radio" name="pins"> Pins<br/>
+			    	<input type="radio" name="mapview"> Clusters<br/>
+			    	<input type="radio" name="mapview"> Heatmap<br/>
+			    	<input type="radio" name="mapview"> Pins<br/>
 			    	<h4 class="background"><span>Date</span></h4>
 			     	<div class="input-group margin-bottom-sm">
 					<input class="form-control" id="from" name="from" type="text" placeholder="Keyword or #Hashtag">
