--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400|Roboto:100,300,400" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="js/ie-emulation-modes-warning.js"></script>
@@ -35,19 +36,26 @@
   <body>
   	
   	<div class="container col-lg-3">
-		<ul class="nav nav-tabs">
+		<ul class="nav nav-tabs nav-justified">
 			  <li class="active"><a data-toggle="tab" href="#controls">Controls</a></li>
 			  <li><a data-toggle="tab" href="#stats">Stats</a></li>
 		</ul>
 		<div class="tab-content">
 			  <div id="controls" class="tab-pane fade in active">
 			         <div class="input-group">
-					<input type="text" name="srchname" class="form-control search-query search" placeholder="Search..." /> 
+					<input type="text" name="srchname" class="form-control search-query search round" placeholder="Search..." onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search...'"/> 
 					<span class="input-group-btn">
-				    		<button type="submit"  class="btn btn-primary search"> Search</button>
+				    <button type="submit"  class="btn btn-primary search btn-circle"> 
+            <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
 				    	</span>
 				 </div>
-			        <input type="checkbox" name="checkbox"  class="search"> Search Exact Keyword
+          <div class="checkbox">
+            <label>
+          <input type="checkbox" name="checkbox"  class="search"> <span class="cust-checkbox"><span class="normal-text"> Search Exact Keyword</span>
+              </span>
+              </label>
+          </div>
 			        <p>22 Tweets by searching</p>
 			    	<h4 class="background"><span>View</span></h4>
 			    	<input type="radio" name="mapview" class="search"> Clusters<br/>
