restyle view section

--- a/index.html
+++ b/index.html
@@ -52,16 +52,32 @@
 				 </div>
           <div class="checkbox">
             <label>
-          <input type="checkbox" name="checkbox"  class="search"> <span class="cust-checkbox"><span class="normal-text"> Search Exact Keyword</span>
+          <input type="checkbox" name="checkbox"  class="search"> 
+              <span class="checkbox-text"> 
+                search exact keyword
               </span>
               </label>
           </div>
-			        <p>22 Tweets by searching</p>
-			    	<h4 class="background"><span>View</span></h4>
-			    	<input type="radio" name="mapview" class="search"> Clusters<br/>
-			    	<input type="radio" name="mapview" class="search"> Heatmap<br/>
-			    	<input type="radio" name="mapview" class="search"> Pins<br/>
-			    	<h4 class="background"><span>Date</span></h4>
+			        <p>22 Tweets by searching</p><hr class="space-hr">
+			    	<h4 class="heading"><hr><span>View</span><hr></h4>
+          <div class="radio">
+            <label>
+            <input type="radio" name="mapview" class="search"> <span class="radio-text">Clusters</span>
+            </label>
+          </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="mapview" class="search"> 
+                <span class="radio-text">Heatmap</span>
+              </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="mapview" class="search"> 
+                  <span class="radio-text">Pins</span>
+                    </label></div>
+      
+			    	<h4 class="heading"><hr><span>Date</span><hr></h4>
 			     	<div class="input-group margin-bottom-sm">
 					<input class="form-control" id="from" name="from" type="text" placeholder="11/27/2016 - 12/3/2016">
 					<span class="input-group-addon"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
