--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </label>
           </div>
 			        <p>22 Tweets by searching</p><hr class="space-hr">
-			    	<h4 class="heading"><hr><span>View</span><hr></h4>
+			    	<h4 class="heading"><span class="background-h"></span><span class="text-h">View</span><span class="background-h"></span></h4>
           <div class="radio">
             <label>
             <input type="radio" name="mapview" class="search"> <span class="radio-text">Clusters</span>
@@ -77,7 +77,7 @@
                   <span class="radio-text">Pins</span>
                     </label></div>
       
-			    	<h4 class="heading"><hr><span>Date</span><hr></h4>
+			    	<h4 class="heading"><span class="background-h"></span><span class="text-h">Date</span><span class="background-h"></span></h4>
 			     	<div class="input-group margin-bottom-sm">
 					<input class="form-control" id="from" name="from" type="text" placeholder="11/27/2016 - 12/3/2016">
 					<span class="input-group-addon"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
